# raylib_template_cmake

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
src/my_lib/: CMakeLists.txt  my_lib.cc
